--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 							<a href="https://www.linkedin.com/learning/paths/become-a-data-analyst?trk=lilblog_06-30-20_msft-announcement-reskilling-linkedin-learning_learning" class="image fit"><img src="images/data.jpg" alt="" /></a>
 						</p>
 					</p>
-							<h4>Alex Freberg'S Youtube Channel</h4>
+							<h4>Alex Freberg's Youtube Channel</h4>
 							<a href="https://www.youtube.com/c/alextheanalyst/about" class="image fit"><img src="images/alex.jpg" alt="" /></a>
 
 							
 						</p>
-						<h4><strong>SQL FOR DATA ANALYSIS </strong></h4>
+						<h4><strong>SQL for Data Analysis </strong></h4>
 						<a href="https://www.udacity.com/course/sql-for-data-analysis--ud198" class="image fit"><img src="images/udacity.jpg" alt="" /></a>
 						</header>
 							<p>
