--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Introduction</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio Projects</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">Skills</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">Data Analytics Resources</span></a></li>
 								
 							</ul>
@@ -64,6 +65,7 @@
 									with industry experience in the Finance and Consulting space.
 								<p>Skills stack include PowerBI,Python,SQL, and Critical Thinking<br />
 								</p>
+								<span style='font-weight: bold;'>TEXT</span>
 							</header>
 
 							<footer>
