--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
 					<!-- Social Icons -->
 					<ul class="icons">
+						<p> Feel free to reach out to me</p>
 						<li><a href="https://twitter.com/tosin_ilesanmi2" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://medium.com/@tosin.ilesanmi193" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
 						<li><a href="https://github.com/engrtee" class="icon brands fa-github"><span class="label">Github</span></a></li>
