--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/picture.jfif" alt="" /></span>
 							<h1 id="title">TOSIN ILESANMI</h1>
-							<p>Data Analyst and Lover of Christ</p>
+							<p><strong>Data Analyst and Lover of Christ</strong></p>
 						</div>
 
 					<!-- Nav -->
